; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_en_fs_ethtool.c_del_ethtool_rule.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_en_fs_ethtool.c_del_ethtool_rule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5e_priv = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.mlx5e_ethtool_rule = type { i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx5e_priv*, %struct.mlx5e_ethtool_rule*)* @del_ethtool_rule to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @del_ethtool_rule(%struct.mlx5e_priv* %0, %struct.mlx5e_ethtool_rule* %1) #0 {
  %3 = alloca %struct.mlx5e_priv*, align 8
  %4 = alloca %struct.mlx5e_ethtool_rule*, align 8
  store %struct.mlx5e_priv* %0, %struct.mlx5e_priv** %3, align 8
  store %struct.mlx5e_ethtool_rule* %1, %struct.mlx5e_ethtool_rule** %4, align 8
  %5 = load %struct.mlx5e_ethtool_rule*, %struct.mlx5e_ethtool_rule** %4, align 8
  %6 = getelementptr inbounds %struct.mlx5e_ethtool_rule, %struct.mlx5e_ethtool_rule* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.mlx5e_ethtool_rule*, %struct.mlx5e_ethtool_rule** %4, align 8
  %11 = getelementptr inbounds %struct.mlx5e_ethtool_rule, %struct.mlx5e_ethtool_rule* %10, i32 0, i32 2
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @mlx5_del_flow_rules(i64 %12)
  br label %14

14:                                               ; preds = %9, %2
  %15 = load %struct.mlx5e_ethtool_rule*, %struct.mlx5e_ethtool_rule** %4, align 8
  %16 = getelementptr inbounds %struct.mlx5e_ethtool_rule, %struct.mlx5e_ethtool_rule* %15, i32 0, i32 1
  %17 = call i32 @list_del(i32* %16)
  %18 = load %struct.mlx5e_priv*, %struct.mlx5e_priv** %3, align 8
  %19 = getelementptr inbounds %struct.mlx5e_priv, %struct.mlx5e_priv* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = add nsw i32 %22, -1
  store i32 %23, i32* %21, align 4
  %24 = load %struct.mlx5e_ethtool_rule*, %struct.mlx5e_ethtool_rule** %4, align 8
  %25 = getelementptr inbounds %struct.mlx5e_ethtool_rule, %struct.mlx5e_ethtool_rule* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @put_flow_table(i32 %26)
  %28 = load %struct.mlx5e_ethtool_rule*, %struct.mlx5e_ethtool_rule** %4, align 8
  %29 = call i32 @kfree(%struct.mlx5e_ethtool_rule* %28)
  ret void
}

declare dso_local i32 @mlx5_del_flow_rules(i64) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @put_flow_table(i32) #1

declare dso_local i32 @kfree(%struct.mlx5e_ethtool_rule*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
